--- a/manifests/base/role.yaml
+++ b/manifests/base/role.yaml
@@ -2,6 +2,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: odh-dashboard
+  namespace: opendatahub
 rules:
   - apiGroups:
       - route.openshift.io
