--- a/manifests/base/cluster-role-binding.yaml
+++ b/manifests/base/cluster-role-binding.yaml
@@ -8,4 +8,4 @@ subjects:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: odh-dashboard
+  name: odh-dashboard-cluster-role
